# HPL_GPU

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Make.top  Makefile  README  README.Rocm  README.md  cmake_install.cmake  runHPL_singleNode.sh
env/: env.crusher.sh
include/: hpl.h  hpl_comm.h  hpl_grid.h  hpl_misc.h  hpl_panel.h  hpl_pfact.h  hpl_pgesv.h  hpl_pmatgen.h  hpl_ptest.h  hplhip_config.hin
include/backend/: hpl_backendCPU.h  hpl_backendCommon.h  hpl_backendHIP.h  hpl_backendWrapper.h
makes/: Make.auxil  Make.backend  Make.blas  Make.comm  Make.gesv  Make.grid  Make.matgen  Make.panel  Make.pauxil  Make.pfact  Make.pgesv  Make.pmatgen  Make.ptest  Make.ptimer  Make.test  Make.timer  Make.units
scripts/: env.crusher.sh  env.lumi.sh  env.mun.sh  env.sh  hostfile  mpirun_xhplhip.sh  runHPL_singleNode.sh  run_bench.sh  run_hpl.slurm  run_hpl_lumi.slurm  run_hpl_mun.slurm  run_xhplhip.sh
setup/: Make.ROCm  env.sh
src/: Makefile.am  Makefile.in
src/auxil/: HPL_dlacpy.cpp  HPL_dlamch.cpp  HPL_dlange.cpp  HPL_dlatcpy.cpp
src/auxil/AMD/: Makefile
src/blas/: HPL_daxpy.cpp  HPL_dcopy.cpp  HPL_dgemm.cpp  HPL_dgemv.cpp  HPL_dger.cpp  HPL_dscal.cpp  HPL_dswap.cpp  HPL_dtrsm.cpp  HPL_dtrsv.cpp  HPL_idamax.cpp
src/blas/AMD/: Make.inc  Makefile
src/comm/: HPL_1rinM.cpp  HPL_1ring.cpp  HPL_2rinM.cpp  HPL_2ring.cpp  HPL_bcast.cpp  HPL_bidir.cpp  HPL_binit.cpp  HPL_blonM.cpp  HPL_blong.cpp  HPL_bwait.cpp  HPL_copyL.cpp  HPL_packL.cpp
src/comm/AMD/: Makefile
src/grid/: HPL_grid_init.cpp  HPL_max.cpp  HPL_min.cpp  HPL_reduce.cpp  HPL_sum.cpp
src/grid/AMD/: Makefile
src/panel/: HPL_pdpanel_disp.cpp  HPL_pdpanel_init.cpp  HPL_pdpanel_new.cpp
src/panel/AMD/: Makefile
src/pauxil/: HPL_dlaswp00N.cpp  HPL_dlaswp01N.cpp  HPL_dlaswp01T.cpp  HPL_dlaswp02N.cpp  HPL_dlaswp03N.cpp  HPL_dlaswp03T.cpp  HPL_dlaswp04N.cpp  HPL_dlaswp04T.cpp  HPL_dlaswp05N.cpp  HPL_dlaswp05T.cpp  HPL_dlaswp06N.cpp  HPL_dlaswp06T.cpp  HPL_dlaswp10N.cpp  HPL_pdlange.cpp  HPL_pdlaprnt.cpp
src/pauxil/AMD/: Makefile
src/pfact/: HPL_dlocmax.cpp  HPL_dlocswpN.cpp  HPL_dlocswpT.cpp  HPL_pdfact.cpp  HPL_pdmxswp.cpp  HPL_pdpancrN.cpp  HPL_pdpancrT.cpp  HPL_pdpanllN.cpp  HPL_pdpanllT.cpp  HPL_pdpanrlN.cpp  HPL_pdpanrlT.cpp  HPL_pdrpancrN.cpp  HPL_pdrpancrT.cpp  HPL_pdrpanllN.cpp  HPL_pdrpanllT.cpp  HPL_pdrpanrlN.cpp  HPL_pdrpanrlT.cpp
src/pfact/AMD/: Makefile
src/pgesv/: HPL_pdgesv.cpp  HPL_pdgesv0.cpp  HPL_pdgesvK1.cpp  HPL_pdgesvK2.cpp  HPL_pdgesvK2_HIP.cpp  HPL_pdgesvK2_no_stream.cpp  HPL_pdlaswp00N.cpp  HPL_pdlaswp00T.cpp  HPL_pdlaswp01T.cpp  HPL_pdtrsv.cpp  HPL_pdupdateNN.cpp  HPL_pdupdateNT.cpp  HPL_pdupdateTN.cpp  HPL_pdupdateTT.cpp  HPL_pipid.cpp
src/pgesv/AMD/: Makefile
testing/backend/: HPL_backendCPU.cpp  HPL_backendCommon.cpp  HPL_backendHIP.cpp  HPL_backendWrapper.cpp  backendCommon.h  backend_hip.h
testing/matgen/AMD/: Makefile
testing/pmatgen/AMD/: Makefile
testing/ptest/: HPL_pddriver.cpp  HPL_pdinfo.cpp  HPL_pdtest.cpp
testing/ptest/AMD/: Makefile
testing/ptimer/AMD/: Makefile
testing/timer/AMD/: Makefile
